# GroupwiseRegistration

./: .gitignore  .gitmodules  CLI-CMake-Addition.txt  CMakeLists.txt  GroupwiseRegistration.cxx  GroupwiseRegistration.xml  build.sh  buildwarp.sh  itkDiffeomorphicDemonsRegistrationFilter.txx  itkESMInvConDemonsRegistrationFunction.txx  itkMultiResolutionPDEDeformableRegistration2.txx  loadoutput.sh  make.sh  namic_notes.txt  runGroupWisePlugin.sh  slicer
GroupWiseRegistration/: .gitignore  CMakeLists.txt  GroupWiseRegistration.cxx  GroupWiseRegistration.h  GroupWiseRegistration.xml  GroupWiseRegistration2.cxx  itkDiffeomorphicDemonsRegistrationFilter.h  itkDiffeomorphicDemonsRegistrationFilter.txx  itkESMInvConDemonsRegistrationFunction.h  itkESMInvConDemonsRegistrationFunction.txx  itkMultiResolutionPDEDeformableRegistration2.h  itkMultiResolutionPDEDeformableRegistration2.txx  tmp.cpp
Testing/: runGroupWisePlugin.sh
WarpVolume/: CMakeLists.txt  WarpVolume.cxx  WarpVolume.xml
doc/: notes.txt
input/: 0652_128.nrrd  g119_128.nrrd
src/: CMakeLists.txt  GroupWiseRegistration.cxx  GroupWiseRegistration.xml  GroupwiseRegistration.cxx  itkMultiResolutionPDEDeformableRegistration2.txx  mex_velocityfieldexp.cpp  tmp.cpp
test0/: runGroupWisePlugin.sh
tests/test0/: runGroupWisePlugin.sh
tests/test1/: matlab_result.txt  output.txt  runGroupWisePlugin.sh
tests/warp_test/: runWarp.sh
tests/warp_test0/: runWarp.sh
tests/warp_test1/: runWarp.sh
